[tool.poetry]
name = "2021z-live"
version = "0.1.0"
description = ""
authors = ["Maciej J. Mrowinski <47922372+brokenpumpernickel@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
jupyterlab = "^3.2.6"
numpy = "^1.22.0"
sympy = "^1.9"
matplotlib = "^3.5.1"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
